--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-paginate": "^8.2.0",
     "react-router": "^6.21.0",
+    "react-simple-star-rating": "^5.1.7",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
